feat: add agree with cookies validation
